.project names as in maven

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Eclipse-Markdown-Editor</name>
+	<name>Markdown-Editor_parent</name>
 	<comment></comment>
 	<projects>
 	</projects>
