--- a/plugin/.project
+++ b/plugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>winterwell.markdown</name>
+	<name>Markdown-Editor_plugin</name>
 	<comment></comment>
 	<projects>
 	</projects>
